deploy/k8s/overlays/prod/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cistafirma-frontend
spec:
  replicas: 3
