deploy/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cistafirma-ingress
spec:
  rules:
    - host: cistafirma.example.com
